# python_cookiecutter_basic_template

./: .gitignore  LICENSE  cookiecutter.json  makefile  pyproject.toml  readme.md
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  cli.py  makefile  pyproject.toml  readme.md
{{ cookiecutter.project_slug }}/docs/: mkdocs.yml
{{ cookiecutter.project_slug }}/docs/docs/: index.md
{{ cookiecutter.project_slug }}/src/: __about__.py  __init__.py
