[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_slug }}"
description = "{{ cookiecutter.project_name }}"
authors = [
  { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
readme = "readme.md"
requires-python = ">=3.8"
dynamic = ["version"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Source = "" # TODO: Update source url of the project.

[tool.hatch.version]
path = "src/__about__.py"

[tool.hatch.envs.dev]
dependencies = ["typer"]
extra-dependencies = [
  "pre-commit",
  "ruff",
  "mkdocs",
  # Testing
  "pytest",
  "pytest-cov",
  "pytest-mock",
]

[tool.hatch.envs.dev.scripts]
help = "python cli.py --help"
lint = "ruff check --config ./pyproject.toml --fix && ruff format --config ./pyproject.toml"
test = "echo 'Work in progres...'"
mkdocs = "cd docs/; mkdocs serve"
build_doc = "cd docs/; mkdocs build"
pre_commit = "pre-commit install"
# App Scripts
hello_world = "python cli.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src tests}"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.coverage.run]
source_pkgs = ["src", "tests"]
branch = true
parallel = true
omit = ["src/__about__.py"]

[tool.coverage.paths]
{{ cookiecutter.project_slug }} = ["src"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # pycodestyle warnings
  "W",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # pydocstyle
  "D",
]
ignore = ["D211", "D213", "D203"]

[tool.ruff.format]
quote-style = "double"
